# Hexium

./: .gitignore  AUTHORS  AUTHORS.md  CONTRIBUTING.md  GNUmakefile  LICENSE.txt  README.md  SECURITY.md  limine.conf
docs/: syscalls.md
initrd/: welcome.txt
kernel/: .gitignore  Cargo.toml  GNUmakefile  build.rs
kernel/.cargo/: config.toml
kernel/src/: boot.rs  lib.rs  log.rs  main.rs  rsod.rs  rtc.rs  serial.rs  tests.rs  writer.rs
kernel/src/arch/: mod.rs
kernel/src/arch/allocator/: mod.rs
kernel/src/arch/x86_64/: limine.rs  mod.rs
kernel/src/arch/x86_64/clock/: mod.rs  pit.rs  rtc.rs
kernel/src/arch/x86_64/debug/: stacktrace.rs
kernel/src/arch/x86_64/interrupts/: gdt.rs  idt.rs  mod.rs  pic.rs
kernel/src/arch/x86_64/memory/: mod.rs  paging.rs  pmm.rs  vmm.rs
kernel/src/arch/x86_64/memory/allocator/: mod.rs
kernel/src/arch/x86_shared/: instructions.rs  io.rs  mod.rs  serial.rs
kernel/src/base/: banner.rs  log.rs  mod.rs
kernel/src/debug/: mod.rs  stacktrace.rs
kernel/src/devices/: mod.rs  timer.rs
kernel/src/devices/keyboard/: mod.rs
kernel/src/drivers/: mod.rs  pic.rs
kernel/src/fs/: memfs.rs  mod.rs  ramfs.rs  vfs.rs
kernel/src/hal/: boot.rs  clock.rs  mod.rs  vfs.rs
kernel/src/interrupts/: gdt.rs  idt.rs  mod.rs
kernel/src/memory/: mod.rs  paging.rs
kernel/src/memory/alloc/: dummy.rs  mod.rs
kernel/src/task/: executor.rs  mod.rs
kernel/src/testsw/: writer.rsw
kernel/src/utils/: mod.rs  registers.rs  types.rs
kernel/tests/: should_panic.rs  writer.rs
tools/: gen-initrd.sh
userspace/: GNUmakefile
(+3 files in other folders)
