[package]
name = "hexium_os"
version = "0.1.0-alpha.1"
edition = "2024"

[dependencies]
crossbeam-queue = { version = "0.3.11", default-features = false, features = [
    "alloc",
] }
conquer-once = { version = "0.2.0", default-features = false }
limine = "0.4"
linked_list_allocator = "0.9.0"
flanterm = "0.0.2"
futures-util = { version = "0.3.4", default-features = false, features = ["alloc"] }
spin = "0.9.8"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
pc-keyboard = "0.7.0"
x86 = "0.52.0"
x86_64 = "0.14.2"
uart_16550 = "0.3.2"

[[test]]
name="should_panic"
harness=false